core code for capacity limits and existing account deploy big
